<resources>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="auth_welcome">Welcome</string>
    <string name="auth_email_hint">Email</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_sign_in">Sign in</string>
    <string name="auth_forgot_password">Forgot Password?</string>
    <string name="auth_sign_up">Create account</string>
    <string name="auth_create_account">Create Account</string>
    <string name="auth_first_name_hint">First Name</string>
    <string name="auth_last_name_hint">Last Name</string>
    <string name="auth_have_account_question">Sign in with social media</string>
    <string name="auth_terms">By creating an account, you are agreeing\n to our <u>Terms of Service</u></string>
</resources>
