<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/half_rounded_white_form">

            <TextView
                android:id="@+id/authLoginTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="?marginPaddingTitle"
                android:layout_marginTop="?marginPaddingTitle"
                android:onClick="@{() -> viewModel.signInAnonymously()}"
                android:text="@string/auth_welcome"
                android:textAppearance="@style/TextAppearance.HealthAssistant.H1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/authLoginForgotPasswordTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="?marginPaddingContentBySide"
                android:layout_marginTop="?marginPaddingBySide"
                android:layout_marginEnd="?marginPaddingContentBySide"
                android:gravity="center"
                android:onClick="@{() -> viewModel.signInAnonymously()}"
                android:text="@string/auth_forgot_password"
                android:textAppearance="@style/TextAppearance.HealthAssistant.Body.Info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authLoginSignInButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/authLoginSignUpButton"
                style="@style/Widget.HealthAssistant.Material.Button"
                android:layout_marginTop="@dimen/spacing_56"
                android:onClick="@{(v) -> viewModel.createAccount(v)}"
                android:text="@string/auth_sign_up"
                android:transitionName="createAccountButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authLoginForgotPasswordTextView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/authLoginSignInButton"
                style="@style/Widget.HealthAssistant.Material.Button.Outlined"
                android:onClick="@{() -> viewModel.signIn()}"
                android:text="@string/auth_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authLoginPasswordEditText" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/authLoginEmailEditText"
                style="@style/Widget.HealthAssistant.TextInputLayout"
                android:hint="@string/auth_email_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authLoginTitleTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/spacing_8"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:text="@={viewModel.email}"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:errorEnabled="true"
                    app:hintEnabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/authLoginPasswordEditText"
                style="@style/Widget.HealthAssistant.TextInputLayout"
                android:hint="@string/auth_password_hint"
                android:transitionName="passwordTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authLoginEmailEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/spacing_8"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:text="@={viewModel.password}"
                    app:counterMaxLength="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/authLoginWithSocialTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_24"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginEnd="@dimen/spacing_24"
                android:gravity="center"
                android:onClick="@{() -> viewModel.signInAnonymously()}"
                android:text="@string/auth_have_account_question"
                android:textAppearance="@style/TextAppearance.HealthAssistant.Body.Small.Info"
                app:layout_constraintBottom_toTopOf="@+id/authLoginFacebookImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authLoginSignUpButton" />

            <ImageView
                android:id="@+id/authLoginGoogleImageView"
                android:layout_width="?listIconSize"
                android:layout_height="?listIconSize"
                android:layout_marginEnd="@dimen/spacing_16"
                android:layout_marginBottom="@dimen/spacing_24"
                android:src="@drawable/ic_google_plus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/authLoginFacebookImageView"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/authLoginFacebookImageView"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/authLoginFacebookImageView"
                android:layout_width="?listIconSize"
                android:layout_height="?listIconSize"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginBottom="@dimen/spacing_24"
                android:src="@drawable/ic_facebook"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authLoginWithSocialTextView" />

            <ImageView
                android:id="@+id/authLoginTwitterImageView"
                android:layout_width="?listIconSize"
                android:layout_height="?listIconSize"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginBottom="@dimen/spacing_24"
                android:src="@drawable/ic_twitter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/authLoginFacebookImageView"
                app:layout_constraintTop_toTopOf="@+id/authLoginFacebookImageView" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <data>

        <variable
            name="viewModel"
            type="com.llsparrow.healthassistant.feature_authentication_impl.presentation.signin.SignInViewModel" />

    </data>
</layout>